debugging for heroku

--- a/learning_journal_basic/learning_journal_basic/templates/main.html
+++ b/learning_journal_basic/learning_journal_basic/templates/main.html
@@ -1,1 +1,39 @@
-<h1>My Learning Journal</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>My Learning Journal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- meta tag detecting viewport -->
+    <link rel="stylesheet" href="vendor/style.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/modules.css">
+    <!-- Code Fellows favicon -->
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/7v5ASc8.png">
+  </head>
+  <body>
+    <header class="main-heading">
+      <h1>Patrick's Learning Journal</h1>
+      <nav class="main-nav">
+        <div class="icon-menu"></div>
+        <ul>
+            <!-- Put the new buttons here -->
+          <li class="nav-item" data-content="projects"><a href="/" class="icon-github">Projects</a></li>
+          <li class="nav-item" data-content="about"><a href="/about" class="icon-barcode">About</a></li>
+          <li class="nav-item" data-content="links"><a href="/links" class="icon-terminal">Links</a></li>
+        </ul>
+      </nav>
+    </header>
+    <article class="" id="projects">
+    <h3>Patrick's Journal, Day 11</h3>
+    <p>A few big lessons today. First: read my homework more carefully. I should have had my
+    html set up properly already. Second, I need more practice, just in general. Third, get more
+    sleep and better food. I've been in a fog all day and I'm not absorbing enough of the lessons.</p>
+    </article>
+    <article class="" id="">
+    </article>
+    <footer>
+      &copy; 2016 Patrick Saunders
+    </footer>
+  </body>
+</html>
