added hard coded journal list.

--- a/learning_journal_basic/templates/main.html
+++ b/learning_journal_basic/templates/main.html
@@ -17,7 +17,7 @@
       <nav class="main-nav">
         <div class="icon-menu"></div>
         <ul>
-            <!-- Put the new buttons here -->
+            <!-- Put the new buttons here, main, journal entry, edit -->
           <li class="nav-item" data-content="projects"><a href="/" class="icon-github">Projects</a></li>
           <li class="nav-item" data-content="about"><a href="/about" class="icon-barcode">About</a></li>
           <li class="nav-item" data-content="links"><a href="/links" class="icon-terminal">Links</a></li>
@@ -25,10 +25,10 @@
       </nav>
     </header>
     <article class="" id="projects">
-    <h3>Patrick's Journal, Day 11</h3>
-    <p>A few big lessons today. First: read my homework more carefully. I should have had my
-    html set up properly already. Second, I need more practice, just in general. Third, get more
-    sleep and better food. I've been in a fog all day and I'm not absorbing enough of the lessons.</p>
+      <h3>Patrick's Journal, Day 11</h3>
+      <p>A few big lessons today. First: read my homework more carefully. I should have had my
+      html set up properly already. Second, I need more practice, just in general. Third, get more
+      sleep and better food. I've been in a fog all day and I'm not absorbing enough of the lessons.</p>
     </article>
     <article class="" id="">
     </article>
