--- a/learning_journal_basic/templates/list.jinja2
+++ b/learning_journal_basic/templates/list.jinja2
@@ -1,10 +1,10 @@
 {% extends "layout.jinja2" %}
-{% block title %}title_ovverides_default{% endblock %}
+{% block title %}title_overrides_default{% endblock %}
 
 {% block body %}
-<h1>This is a list templage</h1>
+<h2>Journal Entries</h2>
 <ul>
-    {% for item in temp_list %}
+    {% for item in entry_list %}
         <li>{{ item }}</li>
     {% endfor %}
 </ul>
