--- a/learning_journal_basic/templates/new.html
+++ b/learning_journal_basic/templates/new.html
@@ -1,1 +1,20 @@
-<h1>New Entry</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>{% block title %}default_title{% endblock %}</title>
+    <!-- includse css file via href, also needs the config.add_static_view entry in __init__ -->
+    <!-- The same technique can be used to link javascript files iin the end of the body -->
+    <link rel="stylesheet" type="text/css" href="{{request.static_path('learning_journal_basic:static/base.css')}}">
+</head>
+<body>
+{% block body %}{% endblock %}
+    <h1>New Entry</h1>
+
+    <nav>
+        <button>
+        <a href="{{
+        request.route_url('home') }}">To The Home Page</a>
+        </button>
+    </nav>
+</body>
+</html>
