--- a/learning_journal_basic/templates/layout.jinja2
+++ b/learning_journal_basic/templates/layout.jinja2
@@ -15,5 +15,7 @@
         request.route_url('home') }}">To The Home Page</a>
         </button>
     </nav>
+    <footer>Created in the Code Fellows 401 Python Program
+    </footer>
 </body>
 </html>
